--- a/app/src/main/res/layout/activity_list_tour_spot.xml
+++ b/app/src/main/res/layout/activity_list_tour_spot.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListTourSpotActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:gravity="center"
+        android:layout_marginTop="40dp"
+        android:textSize="20dp"
+        android:text="sama yg ini terakhir isi ny recycler view buat nampilin lokasi wisata"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:layout_gravity="center"
+        android:src="@drawable/img_1"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"/>
+
+</LinearLayout>
