--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,14 +28,16 @@
             android:text="Hotels"
             android:layout_width="150dp"
             android:layout_height="70dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:onClick="sendMessage1"/>
 
         <Button
             android:id="@+id/btnRestaurant"
             android:text="Restaurants"
             android:layout_width="150dp"
             android:layout_height="70dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:onClick="sendMessage2"/>
 
     </LinearLayout>
 
@@ -45,6 +47,7 @@
         android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_gravity="center"
+        android:onClick="sendMessage3"
         />
 
     <ImageView
