--- a/app/src/main/res/layout/hotel_cell.xml
+++ b/app/src/main/res/layout/hotel_cell.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="180dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:background="@drawable/ittonamecard"
+    app:circularflow_radiusInDP="5dp"
+    android:orientation="vertical"
+    android:gravity="bottom">
 
     <TextView
+        android:paddingLeft="10dp"
+        android:layout_gravity="bottom"
         android:id="@+id/txtHotelName"
         android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/ittonamecard"
+        android:layout_height="wrap_content"
         android:textColor="#fff"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="Nama Web"
-        android:textSize="25dp"
+        android:gravity=""
+        android:text="Hotel Name"
+        android:textSize="30dp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/descHotel"
+        android:text="miomio"
+        android:textColor="#fff"
+        android:paddingLeft="10dp"
+        android:paddingBottom="5dp"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
