--- a/app/src/main/res/layout/activity_list_hotel.xml
+++ b/app/src/main/res/layout/activity_list_hotel.xml
@@ -8,21 +8,8 @@
     tools:context=".ListHotelActivity"
     android:orientation="vertical">
 
-    <TextView
-        android:gravity="center"
-        android:layout_marginTop="40dp"
-        android:textSize="20dp"
-        android:text="ntar isi ny recycler view buat nampilin hotel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:layout_gravity="center"
-        android:src="@drawable/download"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/white"
         android:id="@+id/listHotel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
