--- a/app/src/main/res/layout/hotel_cell.xml
+++ b/app/src/main/res/layout/hotel_cell.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:background="@drawable/ittonamecard"
-    app:circularflow_radiusInDP="5dp"
     android:orientation="vertical"
-    android:gravity="bottom">
+    >
+
+    <LinearLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/ittonamecard"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:gravity="bottom">
 
     <TextView
         android:paddingLeft="10dp"
@@ -19,19 +24,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#fff"
-        android:gravity=""
         android:text="Hotel Name"
         android:textSize="30dp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/descHotel"
+        android:id="@+id/txtDescHotel"
         android:text="miomio"
         android:textColor="#fff"
         android:paddingLeft="10dp"
         android:paddingBottom="5dp"
         android:layout_gravity="bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="40dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
