--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:text="Wassup nibba"
+        android:text="Hello user"
         android:textColor="@color/black"
         android:gravity="center"
         android:textSize="20sp"
@@ -50,11 +50,5 @@
         android:onClick="sendMessage3"
         />
 
-    <ImageView
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
-        android:src="@drawable/img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
 </LinearLayout>
