--- a/app/src/main/res/layout/activity_list_restaurant.xml
+++ b/app/src/main/res/layout/activity_list_restaurant.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListRestaurantActivity">
+    tools:context=".ListHotelActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:gravity="center"
-        android:layout_marginTop="40dp"
-        android:textSize="20dp"
-        android:text="klo yg ini ntar isi ny recycler view buat nampilin restoran"
+    <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/white"
+        android:id="@+id/listRestaurant"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:layout_gravity="center"
-        android:src="@drawable/wanmin"
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
