--- a/app/src/main/res/layout/activity_list_tour_spot.xml
+++ b/app/src/main/res/layout/activity_list_tour_spot.xml
@@ -12,14 +12,8 @@
         android:gravity="center"
         android:layout_marginTop="40dp"
         android:textSize="20dp"
-        android:text="sama yg ini terakhir isi ny recycler view buat nampilin lokasi wisata"
+        android:text="*Under Development*"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:layout_gravity="center"
-        android:src="@drawable/img_1"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"/>
 
 </LinearLayout>
