--- a/app/src/main/res/layout/activity_list_tour_spot.xml
+++ b/app/src/main/res/layout/activity_list_tour_spot.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListTourSpotActivity">
+    tools:context=".ListHotelActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:gravity="center"
-        android:layout_marginTop="40dp"
-        android:textSize="20dp"
-        android:text="*Under Development*"
+    <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/white"
+        android:id="@+id/listTourSpot"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
