--- a/app/src/main/res/layout/tour_spot_cell.xml
+++ b/app/src/main/res/layout/tour_spot_cell.xml
@@ -2,17 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></LinearLayout>
-
-    <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@drawable/ittonamecard"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -23,6 +18,7 @@
             android:layout_height="50dp">
 
             <TextView
+                android:id="@+id/txtTourSpotRating"
                 android:paddingLeft="10dp"
                 android:textColor="@color/white"
                 android:text="5/5"
