--- a/app/src/main/res/layout/restaurant_cell.xml
+++ b/app/src/main/res/layout/restaurant_cell.xml
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:paddingLeft="10dp"
+                        android:layout_marginLeft="10dp"
                         android:layout_gravity="bottom"
                         android:id="@+id/txtRestaurantName"
                         android:layout_width="match_parent"
