--- a/app/src/main/res/layout/hotel_cell.xml
+++ b/app/src/main/res/layout/hotel_cell.xml
@@ -6,11 +6,19 @@
     android:orientation="vertical"
     >
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="6dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="5dp">
+
+    <LinearLayout
         android:background="@drawable/ittonamecard"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -39,5 +47,6 @@
         android:layout_height="40dp"/>
 
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
