hotel cell improved

--- a/app/src/main/res/layout/restaurant_cell.xml
+++ b/app/src/main/res/layout/restaurant_cell.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="5dp">
 
     <LinearLayout
-        android:background="#E0E0E0"
+        android:background="#924241"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -45,7 +45,7 @@
                         android:id="@+id/txtRestaurantName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="#000"
+                        android:textColor="#fff"
                         android:text="Restaurant Name"
                         android:textSize="30dp"
                         android:textStyle="bold" />
@@ -53,7 +53,7 @@
                     <TextView
                         android:id="@+id/txtRatingRestaurant"
                         android:text="miomio"
-                        android:textColor="#000"
+                        android:textColor="#fff"
                         android:paddingLeft="10dp"
                         android:paddingBottom="5dp"
                         android:layout_gravity="bottom"
@@ -62,9 +62,16 @@
                 </LinearLayout>
             </LinearLayout>
 
+        <androidx.cardview.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="6dp"
+            android:layout_margin="5dp">
+
             <LinearLayout
                 android:background="@color/white"
-                android:layout_margin="5dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -89,7 +96,7 @@
                     android:layout_margin="5dp"/>
 
             </LinearLayout>
-
+        </androidx.cardview.widget.CardView>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
